added logo images

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
   <header>
     <nav class="navbar navbar-expand-lg">
       <div class="container">
-        <a class="navbar-brand" href="#">
-          <img src="assets/images/praecepta-logo.png" alt="Praecepta Logo" width="30" height="24"
+        <a class="navbar-brand me-4" href="#">
+          <img src="assets/images/Standard Logo Files/Monochrome on Transparent.png" alt="Praecepta Logo" width="220"
             class="d-inline-block align-text-top">
-          Praecepta
+          <span class="visually-hidden">Praecepta</span>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#praeceptaNavbar"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
